--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "NodeJS Native Encryption and Hashing Helper",
   "license": "MIT",
   "author": "Samuel J Voeller <samuel.voeller@mail.amethyst.live>",
+  "contributors": [
+    "Amethyst Studio Development Team <webmaster@mail.amethyst.live>"
+  ],
   "repository": "git@git.amethyst.live:amethyst-community/cryptocipher.git",
   "engines": {
     "node": ">=13.8.0",
@@ -12,9 +15,21 @@
   },
   "scripts": {
     "dev:lint": "",
-    "test:all": ""
+    "dev:tests:all": "",
+    "dev:tests:encryption": "",
+    "dev:tests:decryption": "",
+    "dev:tests:hashing": ""
   },
   "peerDependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-json": "^2.1.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "npm-check": "^5.9.2"
+  },
   "dependencies": {}
 }
