--- a/.eslintrc
+++ b/.eslintrc
@@ -3,16 +3,17 @@
 
   "parserOptions": {
     "ecmaVersion": 2020,
-    "ecmaFeatures": { "impliedStrict": true }
+    "ecmaFeatures": {
+      "impliedStrict": true
+    }
   },
 
-  "plugins": [ "json", "promise", "node", "standard" ],
-  "extends": [ "eslint:recommended", "plugin:json/recommended", "plugin:promise/recommended", "plugin:node/recommended", "standard" ],
+  "plugins": [ "node", "standard", "promise", "json" ],
+  "extends": [ "standard", "plugin:node/recommended", "eslint:recommended", "plugin:json/recommended", "plugin:promise/recommended"  ],
+
   "env": {
-    "es6": true,
     "node": true
   },
 
-  "rules": {
-  }
+  "rules": {}
 }
