--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,5 @@
     "**/.yarn": true,
     "**/.pnp.*": true
   },
-  "eslint.nodePath": ".yarn/sdks",
-  "typescript.tsdk": "c:\\Users\\sammy\\Documents\\projects\\cryptocipher\\.yarn\\sdks\\typescript\\lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "eslint.nodePath": ".yarn/sdks"
 }
