--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         node-version: ${{ matrix.node }}
 
     - name: Install Yarn Dependencies
-      run: rm .yarnrc.yml && yarn project:initialize && yarn install && yarn up '*'
+      run: rm .yarnrc.yml && yarn set version berry && yarn install
 
     - name: Run Package Tests
       run: yarn project:build
