--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node: [ '8', '10', '12', '14' ]
+        node: [ '10', '12', '14' ]
 
     name: Node v${{ matrix.node }} Validation
 
