--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ on:
     branches: [ master, develop ]
 
 jobs:
-  test:
+  tests:
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     runs-on: ubuntu-16.04
 
     strategy:
