--- a/.github/workflows/sonarcloudql-analysis.yml
+++ b/.github/workflows/sonarcloudql-analysis.yml
@@ -19,3 +19,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        args: >
+          -Dsonar.organization=amethyst-studio
+          -Dsonar.projectKey=cryptocipher
