--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,12 @@
+sonar.projectKey=amethyst-studio_cryptocipher
 sonar.organization=amethyst-studio
-sonar.projectKey=cryptocipher
 
-# relative paths to source directories. More details and properties are described
-# in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=cryptocipher
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./src
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
