--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.organization=amethyst-studio
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=./src
+sonar.sources=./src,./tests,./.eslintrc.js,./package.json,./tsconfig.json,yarn.lock
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
