--- a/.gitignore
+++ b/.gitignore
@@ -113,7 +113,7 @@ dist
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
