feat: update workflows to support new scripts, add coverage to sonar

--- a/.github/workflows/coreql-analysis.yml
+++ b/.github/workflows/coreql-analysis.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Initialize Project
       run: rm .yarnrc.yml && yarn set version berry && yarn install
     - name: Analyze Project
-      run: yarn project:build
+      run: yarn lint-only && yarn test && yarn build
