--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,12 @@
+# Sonar Configuration
 sonar.projectKey=amethyst-studio_cryptocipher
 sonar.organization=amethyst-studio
-
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=cryptocipher
-#sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./src,./tests,./.eslintrc.js,./package.json,./tsconfig.json,yarn.lock
 
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
