chore(build): remove extranious files from sources of SonarCloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=amethyst-studio_cryptocipher
 sonar.organization=amethyst-studio
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=./src,./tests,./.eslintrc.js,./package.json,./tsconfig.json,yarn.lock
+sonar.sources=./src,./tests,./package.json,yarn.lock
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
