--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@typescript-eslint/parser": "^4.0.1",
     "@yarnpkg/pnpify": "^2.1.0",
     "chai": "^4.2.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.10.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-import-resolver-node": "^0.3.4",
@@ -80,7 +80,7 @@
     "eslint-plugin-tsdoc": "^0.2.7",
     "husky": "^4.3.0",
     "mocha": "^8.1.3",
-    "node-preload": "0.2.0",
+    "node-preload": "^0.2.1",
     "nyc": "^15.1.0",
     "source-map-support": "^0.5.19",
     "ts-node": "^9.0.0",
