--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "stage:tests": "mocha './tests/**/*.js'",
     "project:build": "npm run stage:eslint && npm run stage:build && npm run stage:tests",
     "project:upgrade": "npx npm-check-updates -u --target latest && wget https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,vscode -O ./.gitignore",
-    "project:generate-docs": "typedoc --mode file --out ./docs/ ./lib/",
+    "project:generate-docs": "typedoc file --out ./docs/ ./lib/",
     "prepack": "npm run project:build"
   },
   "husky": {
@@ -63,8 +63,8 @@
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.16",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "chai": "^4.2.0",
     "eslint": "^7.16.0",
     "eslint-config-standard": "^16.0.2",
@@ -77,7 +77,7 @@
     "eslint-plugin-tsdoc": "^0.2.10",
     "husky": "^4.3.6",
     "mocha": "^8.2.1",
-    "typedoc": "^0.19.2",
+    "typedoc": "^0.20.4",
     "typescript": "^4.1.3"
   },
   "peerDependencies": {},
