--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptocipher",
   "description": "Node.js simplified cryptography implementation, powered by TypeScript",
-  "version": "3.0.6",
+  "version": "3.0.7",
   "license": "MIT",
   "author": "Samuel J Voeller <samuel.voeller@amethyst.live> (https://chat.amethyst.live/)",
   "contributors": [],
@@ -33,7 +33,8 @@
   },
   "engines": {
     "node": ">=10.0.0",
-    "npm": ">6.14.0"
+    "npm": ">7.11.0",
+    "yarn": "use-npm"
   },
   "engineStrict": true,
   "main": "./dist/index.js",
@@ -46,29 +47,28 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "stage:eslint": "eslint .",
-    "stage:build": "npx tsc --build",
-    "stage:tests": "mocha './tests/**/*.js'",
-    "project:build": "npm run stage:eslint && npm run stage:build && npm run stage:tests",
-    "project:upgrade": "npx npm-check-updates -u --target latest && wget https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,vscode -O ./.gitignore",
-    "project:generate-docs": "typedoc --out ./docs/ ./lib/",
-    "prepack": "npm run project:build"
+    "build": "(eslint .) && (npx tsc --build) && (mocha './tests/**/*.js')",
+    "generateDocs": "typedoc --out ./docs/ ./lib/",
+    "prepack": "npm run build",
+    "upgrade": "npx npm-check-updates -u --target latest --peer && wget https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,visualstudio -O ./.gitignore && cat ./custom.gitignore >> .gitignore"
   },
   "devDependencies": {
     "@types/chai": "^4.2.16",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.41",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "chai": "^4.3.4",
-    "eslint": "^7.25.0",
+    "eslint": "^7.26.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-tsdoc": "^0.2.14",
+    "eslint-plugin-typescript-sort-keys": "^1.6.0",
     "husky": "^6.0.0",
     "mocha": "^8.3.2",
     "typedoc": "^0.20.36",
