--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,24 @@
 {
   "compilerOptions": {
+    "target": "es6",
     "module": "commonjs",
-    "target": "ES2015",
-    "lib": [
-      "ES2015",
-      "ES2016",
-      "ES2017",
-      "ES2018",
-      "ES2019",
-      "ES2020",
-      "ESNext"
-    ],
+    "moduleResolution": "node",
+    "declaration": true,
+    "outDir": "./dist/",
     "types": [
       "node",
       "chai",
       "mocha"
     ],
-    "outDir": "./dist/",
-    "declaration": true,
-    "removeComments": false,
     "alwaysStrict": true,
     "strictNullChecks": true,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noImplicitAny": true,
-    "esModuleInterop": true
+    "downlevelIteration": false,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true
   },
   "include": [
     "./index.ts",
