--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "hashing",
     "library",
     "no-dependencies",
+    "no-deps",
+    "nodeps",
+    "0-deps",
+    "0deps",
     "node",
     "node-js",
     "nodejs",
@@ -47,31 +51,31 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "runEslint": "eslint .",
-    "build": "npm run runEslint && (npx tsc --build) && (mocha './tests/**/*.js')",
-    "generateDocs": "typedoc --out ./docs/ ./lib/",
+    "stage": "eslint .",
+    "build": "(npm run stage) && (npx tsc --build) && (mocha './tests/**/*.js') && (npm run docs)",
+    "docs": "typedoc --out ./docs/ ./lib/",
     "prepack": "npm run build",
     "upgrade": "npx npm-check-updates -u --target latest --peer && wget https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,visualstudio -O ./.gitignore && cat ./custom.gitignore >> .gitignore"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.16",
+    "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.41",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "chai": "^4.3.4",
     "eslint": "^7.26.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-import-resolver-node": "^0.3.4",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-tsdoc": "^0.2.14",
     "eslint-plugin-typescript-sort-keys": "^1.6.0",
     "husky": "^6.0.0",
-    "mocha": "^8.3.2",
+    "mocha": "^8.4.0",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   },
