--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "prepare": "husky install",
     "stage": "eslint .",
-    "build": "(npm run stage) && (npx tsc --build) && (mocha './tests/**/*.js') && (npm run docs)",
+    "build": "(npm run stage) && (npx tsc --build) && (mocha './tests/**/*.js')s",
     "docs": "typedoc --out ./docs/ ./lib/",
     "prepack": "npm run build",
     "upgrade": "npx npm-check-updates -u --target latest --peer && wget https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,visualstudio -O ./.gitignore && cat ./custom.gitignore >> .gitignore"
