--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
+    "target": "ES2016",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "declaration": true,
     "outDir": "./dist/",
