--- a/package.json
+++ b/package.json
@@ -51,31 +51,29 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "prepack": "npm run build",
-    "stage": "eslint .",
-    "build": "(npm run stage) && (npx tsc --build) && (mocha './tests/**/*.js')",
-    "docs": "typedoc --out ./docs/ ./lib/",
+    "prepack": "npm run runCompiler",
+    "runEslint": "eslint .",
+    "runCompiler": "(npm run runEslint) && (npx tsc --build) && (mocha './tests/**/*.js')",
+    "runGenerateDocs": "typedoc --out ./docs/ ./lib/",
     "upgrade": "npx npm-check-updates -u --target latest --peer && wget https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,visualstudio -O ./.gitignore && cat ./custom.gitignore >> .gitignore"
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^15.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.23.0",
-    "@typescript-eslint/parser": "^4.23.0",
+    "@types/node": "^15.12.2",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "chai": "^4.3.4",
-    "eslint": "^7.26.0",
-    "eslint-config-standard": "^16.0.2",
+    "eslint": "^7.28.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-import-resolver-node": "^0.3.4",
-    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-tsdoc": "^0.2.14",
-    "eslint-plugin-typescript-sort-keys": "^1.6.0",
     "husky": "^6.0.0",
-    "mocha": "^8.4.0",
+    "mocha": "^9.0.0",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   },
