--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptocipher",
   "description": "Node.js simplified cryptography implementation, powered by TypeScript",
-  "version": "3.0.7",
+  "version": "3.1.0",
   "license": "MIT",
   "author": "Samuel J Voeller <samuel.voeller@amethyst.live> (https://chat.amethyst.live/)",
   "contributors": [],
@@ -50,32 +50,32 @@
     "/LICENSE.md"
   ],
   "scripts": {
-    "prepare": "husky install",
-    "prepack": "npm run runCompiler",
-    "runEslint": "eslint .",
-    "runCompiler": "(npm run runEslint) && (npx tsc --build) && (mocha './tests/**/*.js')",
-    "runGenerateDocs": "typedoc --out ./docs/ ./lib/",
-    "upgrade": "npx npm-check-updates -u --target latest --peer && wget https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,visualstudio -O ./.gitignore && cat ./custom.gitignore >> .gitignore"
+    "husky": "husky install",
+    "format": "eslint .",
+    "build": "(npm run husky) && (npm run format) && (npx tsc --build) && (mocha './tests/**/*.js')",
+    "prepack": "npm run build",
+    "upgrade": "npx npm-check-updates -u --target latest --peer && wget https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,visualstudio -O ./origin.gitignore && echo '' > .gitignore && echo '# MANAGED FILE: PLEASE MAKE MODIFICATIONS TO ./user.gitignore' >> .gitignore && cat ./user.gitignore >> .gitignore && cat ./origin.gitignore >> .gitignore",
+    "docs": "typedoc --out ./docs/ ./lib/"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.18",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^15.12.2",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.7.10",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "chai": "^4.3.4",
-    "eslint": "^7.28.0",
+    "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-import-resolver-node": "^0.3.4",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "husky": "^6.0.0",
-    "mocha": "^9.0.0",
-    "typedoc": "^0.20.36",
-    "typescript": "^4.2.4"
+    "husky": "^7.0.2",
+    "mocha": "^9.1.1",
+    "typedoc": "^0.21.9",
+    "typescript": "^4.4.2"
   },
   "root": true
 }
