fix: renamed script in workflow

--- a/.github/workflows/coreql.analysis.yml
+++ b/.github/workflows/coreql.analysis.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Initialize Project
         run: npm install
       - name: Analyze Project
-        run: npm run runCompiler
+        run: npm run build
