feat: rewrite to cookiecutter layout

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 # MANAGED FILE: PLEASE MAKE MODIFICATIONS TO ./user.gitignore
+### USER GENERATED IGNORE FILE
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,visualstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,yarn,webstorm+all,visualstudiocode,visualstudio
