--- a/package.json
+++ b/package.json
@@ -1,44 +1,17 @@
 {
   "name": "cryptocipher",
-  "description": "Node.js simplified cryptography implementation, powered by TypeScript",
-  "version": "3.1.0",
+  "description": "Simplified Node.js Encryption and Hashing Utility. Enforces strong standards by default to allow users to focus on the application instead of how security will be implemented.",
+  "version": "1.0.0",
   "license": "MIT",
-  "author": "Samuel J Voeller <samuel.voeller@amethyst.live> (https://chat.amethyst.live/)",
+  "author": "Samuel Voeller <samuel.voeller@mxsrv.amethyst.live> (https://invite-to.amethyst.live)",
   "contributors": [],
-  "keywords": [
-    "aes",
-    "cipher",
-    "crypto",
-    "cryptography",
-    "cryptohash",
-    "decryption",
-    "encryption",
-    "hashes",
-    "hashing",
-    "library",
-    "no-dependencies",
-    "no-deps",
-    "nodeps",
-    "0-deps",
-    "0deps",
-    "node",
-    "node-js",
-    "nodejs",
-    "npm",
-    "npm-package",
-    "npmjs",
-    "sha",
-    "ts",
-    "typescript"
-  ],
   "homepage": "https://github.com/amethyst-studio/cryptocipher",
   "repository": {
     "url": "git@github.com/amethyst-studio/cryptocipher.git"
   },
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">7.11.0",
-    "yarn": "use-npm"
+    "node": ">=16.7.0",
+    "npm": ">=7.22.0"
   },
   "engineStrict": true,
   "main": "./dist/index.js",
