--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Amethyst Authority
-    url: mailto:authority@amethyst.live
+  - name: Private Support
+    url: mailto:support@mxsrv.amethyst.live
     about: For security concerns or violations of Code of Conduct.
-  - name: Amethyst Discord
-    url: https://chat.amethyst.live/
-    about: For general questions and support, use discussions or join us in Discord.
+  - name: Community Support
+    url: https://invite-to.amethyst.live/
+    about: For general questions and support, use discussions or join us in our Discord.
