chore(maint): upgrade dependencies and rework some non-functionality files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
   "include": [
     "./*.ts",
     "./**/*.ts",
-    "./.eslintrc.js",
+    "./.eslintrc.js"
+  ],
+  "exclude": [
+    "./dist/"
   ]
 }
