feat: update config to change contact link name

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Private Support
+  - name: Direct Contact
     url: mailto:support@mxsrv.amethyst.live
     about: For security concerns or violations of Code of Conduct.
   - name: Community Support
