feat: sync with rolledback changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,1 @@
-{
-  "compilerOptions": {
-    "target": "ES2016",
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "types": [
-      "node",
-      "mocha",
-      "chai"
-    ],
-    "alwaysStrict": true,
-    "declaration": true,
-    "downlevelIteration": false,
-    "esModuleInterop": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "strictNullChecks": true
-  },
-  "include": [
-    "./*.ts",
-    "./**/*.ts",
-    "./.eslintrc.js"
-  ],
-  "exclude": [
-    "./dist/"
-  ]
-}
+.rc/script/configuration/.trunk/_/tsconfig.json
