--- a/package.json
+++ b/package.json
@@ -16,35 +16,43 @@
   "engineStrict": true,
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": ["/dist/", "/package.json", "/README.md", "/LICENSE.md"],
+  "files": [
+    "lib",
+    ".eslintrc.js",
+    ".gitignore",
+    ".gitmodules",
+    "index.ts",
+    "LICENSE",
+    "package-lock.json",
+    "package.json",
+    "README.md",
+    "tsconfig.json"
+  ],
   "scripts": {
+    "start": "launch",
     "prepare": "husky install",
-    "prepack": "npm run build",
-    "format": "eslint .",
-    "test": "mocha './tests/**/*.js'",
-    "build": "npx tsc --build && npm run test",
-    "upgrade": "npx npm-check-updates -u --target latest --peer && wget https://www.toptal.com/developers/gitignore/api/node,yarn,webstorm+all,visualstudiocode,visualstudio -O ./origin.gitignore && echo '' > .gitignore && echo '# MANAGED FILE: PLEASE MAKE MODIFICATIONS TO ./user.gitignore' >> .gitignore && cat ./user.gitignore >> .gitignore && cat ./origin.gitignore >> .gitignore",
-    "docs": "typedoc --out ./docs/ ./index.ts ./lib/ --entryPointStrategy expand"
+    "prepack": "npm run build"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.10.2",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
-    "chai": "^4.3.4",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.24.2",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "chai": "^4.3.6",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "husky": "^7.0.2",
-    "mocha": "^9.1.2",
-    "typedoc": "^0.22.4",
-    "typescript": "^4.4.3"
+    "husky": "^7.0.4",
+    "mocha": "^9.2.0",
+    "script-launcher": "^1.37.1",
+    "typedoc": "^0.22.11",
+    "typescript": "^4.5.5"
+  },
+  "optionalDependencies": {
+    "ts-node": "^10.4.0"
   },
   "root": true
 }
