feat: tick version and update dec

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptocipher",
-  "description": "Simplified Node.js Encryption and Hashing Wrapper. Featuring security & policy by design to ensure strong standards for development of your services.",
-  "version": "3.0.6",
+  "description": "Simplified Node.js Encryption, Hashing, and Hmac. Featuring security & policy by design to ensure strong standards for development of your services.",
+  "version": "3.1.0",
   "license": "MIT",
   "author": "Samuel Voeller <samuel.voeller@mxsrv.amethyst.live> (https://invite-to.amethyst.live)",
   "contributors": [],
