--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
+    ".rc/script/configuration/.trunk/_/tsconfig.json",
     "dist",
     "lib",
     "index.ts",
