feat: update for install method testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,64 @@
-.rc/script/configuration/.trunk/_/tsconfig.json
+{
+  "compilerOptions": {
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "alwaysStrict": true,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "strict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "useUnknownInCatchVariables": true,
+    "baseUrl": "./",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "types": ["node", "mocha", "chai"],
+    "declaration": true,
+    "declarationMap": true,
+    "downlevelIteration": true,
+    "importHelpers": true,
+    "importsNotUsedAsValues": "error",
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "newLine": "LF",
+    "noEmitHelpers": false,
+    "noEmitOnError": true,
+    "outDir": "dist",
+    "preserveConstEnums": true,
+    "removeComments": false,
+    "stripInternal": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": [
+      "ES5",
+      "ES2015",
+      "ES2016",
+      "ES2017",
+      "ES2018",
+      "ES2019",
+      "ES2020",
+      "ES2021",
+      "ESNext"
+    ],
+    "target": "ES6",
+    "useDefineForClassFields": true,
+    "composite": true,
+    "pretty": true
+  },
+  "typeAcquisition": {
+    "enable": true
+  },
+  "exclude": ["dist"],
+  "include": ["*.ts", "**/*.ts", ".eslintrc.js"]
+}
