--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start": "launch",
     "prepare": "husky install",
     "postinstall:detect-dist": "node -e \"let exists = !require('fs').existsSync('dist'); if (!exists) process.exit(1); process.exit(0);\"",
-    "postinstall": "pwd && npm run postinstall:detect-dist || echo 'Missing dist... compiling with tsc?' && touch .missing_dist"
+    "postinstall": "npm run postinstall:detect-dist || echo \"___PROJECT_BUILT_FROM_SOURCES___\" >> .BUILT_FROM_SOURCES && npx --yes=true -p typescript tsc --project ./tsconfig.json"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
