--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start": "launch",
     "prepare": "husky install",
     "postinstall:detect-dist": "node -e \"let exists = !require('fs').existsSync('dist'); if (!exists) process.exit(1); process.exit(0);\"",
-    "postinstall": "npm run postinstall:detect-dist || echo \"___PROJECT_BUILT_FROM_SOURCES___\" >> .BUILT_FROM_SOURCES && npm exec --package=typescript -c 'npm set-script prepare \"\" && npm install @types/chai @types/mocha @types/node && tsc --project ./tsconfig.json' && rm -rf node_modules"
+    "postinstall": "npm run postinstall:detect-dist || echo \"___PROJECT_BUILT_FROM_SOURCES___\" >> .BUILT_FROM_SOURCES && npm exec --package=typescript -c 'npm set-script prepare \"\" && npm install @types/chai @types/mocha @types/node && tsc --project ./tsconfig.json' && rm -rf node_modules && npm dedupe"
   },
   "devDependencies": {
     "@types/chai": "^4.3.0",
